--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html
   xmlns:th="https://www.thymeleaf.org"
   th:replace="~{fragments/layout :: layout (~{::body},'vets')}"
@@ -11,19 +12,24 @@
 
   <body>
     <h2>Veterinarians</h2>
+
     <table id="vets" class="table table-striped">
       <thead>
         <tr>
-          <th>Id</th>
-          <th>First Name</th>
-          <th>Last Name</th>
+          <th>Name</th>
+          <th>Specialties</th>
         </tr>
       </thead>
       <tbody>
-        <tr th:each="vet: ${listVets}">
-          <td th:text="${vet.id}">id</td>
-          <td th:text="${vet.firstName}">firstName</td>
-          <td th:text="${vet.lastName}">lastName</td>
+        <tr th:each="vet : ${listVets}">
+          <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
+          <td>
+            <span
+              th:each="specialty : ${vet.specialities}"
+              th:text="${specialty.description + ' '}"
+            ></span>
+            <span th:if="${vet.specialities.size() == 0}">none</span>
+          </td>
         </tr>
       </tbody>
     </table>
