--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html
+  xmlns:th="https://www.thymeleaf.org"
+  th:replace="~{fragments/layout :: layout (~{::body},'owners')}"
+  lang="en"
+>
   <head>
     <meta charset="UTF-8" />
     <title>Owners</title>
   </head>
+
   <body>
-    <h1 th:text="'List of Owners'">Owners</h1>
-    <table>
+    <h2>Owners</h2>
+    <table id="owners" class="table table-striped">
       <thead>
         <tr>
-          <th>Id</th>
-          <th>First Name</th>
-          <th>Last Name</th>
+          <th style="width: 150px">Name</th>
+          <th style="width: 200px">Address</th>
+          <th>City</th>
+          <th style="width: 120px">Telephone</th>
+          <th>Pets</th>
         </tr>
       </thead>
       <tbody>
-        <tr th:each="owner: ${owners}">
+        <tr th:each="owner: ${listOwners}">
           <td th:text="${owner.id}">id</td>
           <td th:text="${owner.firstName}">firstName</td>
           <td th:text="${owner.lastName}">lastName</td>
