--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Veterinarian</title>
-</head>
-<body>
-<h1 th:text="vets">Index Header</h1>
-</body>
+  </head>
+  <body>
+    <h1 th:text="'List of Vets'">Vets</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Id</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr th:each="vet: ${vets}">
+          <td th:text="${vet.id}">id</td>
+          <td th:text="${vet.firstName}">firstName</td>
+          <td th:text="${vet.lastName}">lastName</td>
+        </tr>
+      </tbody>
+    </table>
+  </body>
 </html>
