--- a/pet-clinic-web/src/main/resources/templates/owners/findOwners.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/findOwners.html
@@ -8,7 +8,7 @@
     <h2>Find Owners</h2>
 
     <form
-      th:object="${owner}"
+      th:object="${ownerDto}"
       th:action="@{/owners}"
       method="get"
       class="form-horizontal"
