Use better name.

--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -21,7 +21,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr th:each="vet : ${listVets}">
+        <tr th:each="vet : ${vets}">
           <td th:text="${vet.firstName + ' ' + vet.lastName}"></td>
           <td>
             <span
