Fix breaking changes for vets(NamedEntity).

--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -26,7 +26,7 @@
           <td>
             <span
               th:each="specialty : ${vet.specialities}"
-              th:text="${specialty.description + ' '}"
+              th:text="${specialty.name + ' '}"
             ></span>
             <span th:if="${vet.specialities.size() == 0}">none</span>
           </td>
