--- a/pet-clinic-web/src/main/resources/templates/owners/createOrUpdateOwnerForm.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/createOrUpdateOwnerForm.html
@@ -1,54 +1,54 @@
 <html
-        xmlns:th="https://www.thymeleaf.org"
-        th:replace="~{fragments/layout :: layout (~{::body},'owners')}"
-        lang="en"
+  xmlns:th="https://www.thymeleaf.org"
+  th:replace="~{fragments/layout :: layout (~{::body},'owners')}"
+  lang="en"
 >
-<body>
-<h2>Owner</h2>
-<form
-        th:object="${ownerDto}"
-        class="form-horizontal"
-        id="add-owner-form"
-        method="post"
->
-    <div class="form-group has-feedback">
+  <body>
+    <h2>Owner</h2>
+    <form
+      th:object="${ownerDto}"
+      class="form-horizontal"
+      id="add-owner-form"
+      method="POST"
+    >
+      <div class="form-group has-feedback">
         <div style="display: none">
-            <input aria-label="id" th:text="${ownerDto.id}"/>
+          <input aria-label="id" th:text="${ownerDto.id}" />
         </div>
 
         <input
-                aria-label="firstName"
-                th:replace="~{fragments/inputField :: input ('First Name', 'firstName', 'text')}"
+          aria-label="firstName"
+          th:replace="~{fragments/inputField :: input ('First Name', 'firstName', 'text')}"
         />
         <input
-                aria-label="lastName"
-                th:replace="~{fragments/inputField :: input ('Last Name', 'lastName', 'text')}"
+          aria-label="lastName"
+          th:replace="~{fragments/inputField :: input ('Last Name', 'lastName', 'text')}"
         />
         <input
-                aria-label="address"
-                th:replace="~{fragments/inputField :: input ('Address', 'address', 'text')}"
+          aria-label="address"
+          th:replace="~{fragments/inputField :: input ('Address', 'address', 'text')}"
         />
         <input
-                aria-label="city"
-                th:replace="~{fragments/inputField :: input ('City', 'city', 'text')}"
+          aria-label="city"
+          th:replace="~{fragments/inputField :: input ('City', 'city', 'text')}"
         />
         <input
-                aria-label="telephone"
-                th:replace="~{fragments/inputField :: input ('Telephone', 'telephone', 'text')}"
+          aria-label="telephone"
+          th:replace="~{fragments/inputField :: input ('Telephone', 'telephone', 'text')}"
         />
-    </div>
-    <div class="form-group">
+      </div>
+      <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-            <button
-                    th:with="text=${ownerDto['new']} ? 'Add Owner' : 'Update Owner'"
-                    class="btn btn-primary"
-                    type="submit"
-                    th:text="${text}"
-            >
-                Add Owner
-            </button>
+          <button
+            th:with="text=${ownerDto['new']} ? 'Add Owner' : 'Update Owner'"
+            class="btn btn-primary"
+            type="submit"
+            th:text="${text}"
+          >
+            Add Owner
+          </button>
         </div>
-    </div>
-</form>
-</body>
+      </div>
+    </form>
+  </body>
 </html>
