replace all model objects with dtos.

--- a/pet-clinic-web/src/main/resources/templates/owners/ownerDetails.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/ownerDetails.html
@@ -7,7 +7,7 @@
 >
   <body>
     <h2>Owner Information</h2>
-    <table class="table table-striped" th:object="${owner}">
+    <table class="table table-striped" th:object="${ownerDto}">
       <tr>
         <th>Name</th>
         <td th:text="*{firstName + ' ' + lastName}">Full Name</td>
@@ -29,10 +29,10 @@
       </tr>
     </table>
 
-    <a th:href="@{{id}/edit(id=${owner.id})}" class="btn btn-primary"
+    <a th:href="@{{id}/edit(id=${ownerDto.id})}" class="btn btn-primary"
       >Edit Owner</a
     >
-    <a th:href="@{{id}/pets/new(id=${owner.id})}" class="btn btn-primary"
+    <a th:href="@{{id}/pets/new(id=${ownerDto.id})}" class="btn btn-primary"
       >Add New Pet</a
     >
     <br />
@@ -41,7 +41,7 @@
 
     <h2>Pets and Visits</h2>
     <table class="table table-striped">
-      <tr th:each="pet : ${owner.pets}">
+      <tr th:each="pet : ${ownerDto.pets}">
         <td style="vertical-align: top">
           <dl class="dl-horizontal">
             <dt>Name</dt>
@@ -78,14 +78,14 @@
             <tr>
               <td>
                 <a
-                  th:href="@{{ownerId}/pets/{petId}/edit(ownerId=${owner.id},petId=${pet.id})}"
+                  th:href="@{{ownerId}/pets/{petId}/edit(ownerId=${ownerDto.id},petId=${pet.id})}"
                   >Edit Pet</a
                 >
               </td>
 
               <td>
                 <a
-                  th:href="@{{ownerId}/pets/{petId}/visits/new(ownerId=${owner.id},petId=${pet.id})}"
+                  th:href="@{{ownerId}/pets/{petId}/visits/new(ownerId=${ownerDto.id},petId=${pet.id})}"
                   >Add Visit</a
                 >
               </td>
