Change birth date input field to date.

--- a/pet-clinic-web/src/main/resources/templates/fragments/inputField.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/inputField.html
@@ -22,7 +22,7 @@
               <input
                 th:case="'date'"
                 class="form-control"
-                type="text"
+                type="date"
                 th:field="*{__${name}__}"
                 placeholder="YYYY-MM-DD"
                 title="Enter a date in this format: YYYY-MM-DD"
